<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Turtle Beach</string>
    <string name="LYTICS_DEV">011e49bac227432f359050d-14479fd6-3f46-11e4-a426-009c5fda0a25</string>
    <string name="LYTICS_PROD">8766ffc3ca057483467e0e7-442074d4-3f46-11e4-a426-009c5fda0a25</string>
    <string name="admin_number">STORE LOCATION NUMBER*</string>
    <string name="admin_zip">STORE ZIP CODE*</string>
    <string name="save">SAVE</string>
    <string name="logs">GET LOGS</string>
    <string name="noName">Please enter zip code</string>
    <string name="noNumber">Please enter the store location number</string>
    <string name="noText">All fields required</string>
    <string name="dateTimeFormat">MM/dd/yyyy hh:mm aa</string>
    <string name="pcTitle">PC HEADSET CATALOG</string>
    <string name="pcSubTitle">SELECT A HEADSET FOR MORE INFORMATION</string>

    <string name="recommend_txt">BASED ON YOUR RESPONSES, WE RECOMMEND:</string>
    <string name="empty_text"></string>
    
    <!-- Admin Console strings -->
    <string name="adminTitle">CONFIGURATION</string>
    <string name="adminManLabel">MANUFACTURER</string>
    <string name="adminVerLabel">ANDROID VERSION</string>
    <string name="adminExit">EXIT APP</string>
    <string name="cancel">CANCEL</string>

    <!-- Log dialogs -->
    <string name="admin_dogSD">SD card required</string>
    <string name="admin_dogSDtext">To download logs, an SD card must be inserted into the tablet.</string>
    <string name="admin_dogDL">Download logs?</string>
    <string name="admin_dogDLtext">Logs will be downloaded to the SD Card.</string>
    <string name="admin_dogDone">Download complete</string>
    <string name="admin_dogDonetext">Logs have been successfully downloaded to the SD Card.</string>

    <!-- Splash Screen prompts -->
    <string name="splashTitle">PLEASE PUT ON A \nHEADSET TO BEGIN</string>
    <string name="splashButton">TOUCH THE TABLET TO CONTINUE</string>

    <!-- Menu prompts -->
    <string name="mmenu_why">WHY TURTLE BEACH</string>
    <string name="mmenu_catalog">HEADSET CATALOG</string>
    <string name="mmenu_trailer">GAME TRAILERS</string>
    <string name="mmenu_featured">FEATURED HEADSETS</string>
    <string name="mmenu_special">SPECIAL EDITION</string>
    <string name="mmenu_sound">SOUND EXPERIENCES</string>
    <string name="mmenu_pc">PC HEADSETS</string>
    <string name="mmenu_select">HEADSET SELECTOR</string>
    <string name="mmenu">MAIN MENU</string>
    <string name="mmenu_dialog">ENTER PASSWORD OR CALL 877-456-7258 TO OBTAIN PASSWORD</string>
    <string name="mmenu_dialogTitle">PASSWORD REQUIRED</string>
    
    <!-- Featured headset strings -->
    <string name="featTitle">PLEASE SELECT A HEADSET</string>
    <string name="playvideo">PLAY VIDEO</string>

    <!-- Sound Experiences strings -->
    <string name="sndTitle">SOUND EXPERIENCES</string>
    <string name="sndSubTitle">CHOOSE A GAME GENRE</string>
    <string name="sndButton">PLAY</string>
    <string name="sndRPG">PLAY RPG</string>
    <string name="sndAction">PLAY ACTION</string>
    <string name="sndSports">PLAY SPORTS</string>
    <string name="sndRacing">PLAY RACING</string>
   
	<!-- Headset Catalog screen -->
    <string name="hcTitle">HEADSET CATALOG</string>
    <string name="hc1">XBOX ONE</string>
    <string name="hc2">PS4</string>
    <string name="hc3">XBOX 360</string>
    <string name="hc4">PS3</string>
    
		<!-- Headset Selector screen -->
		<string name="hsTitle">HEADSET SELECTOR</string>
		<string name="hsSelected">BASED ON YOUR RESPONSE, WE RECOMMEND:</string>
		<string name="hsTraitXbox360">XBOX 360</string>
		<string name="hsTraitXboxOne">XBOX ONE</string>
		<string name="hsTraitPS3">PS3</string>
		<string name="hsTraitPS4">PS4</string>
		<string name="hsTraitMultiPlatform">XBOX \u0026 PS3</string>
		<string name="hsTraitPC">PC</string>
		<string name="hsTraitWired">WIRED</string>
		<string name="hsTraitWireless">WIRELESS</string>
		<string name="hsTraitSurroundSound">SURROUND</string>
		<string name="hsTraitStereo">STEREO</string>
	
	<!-- Special Edition screen -->
    <string name="specialTitle">SPECIAL EDITION</string>
    <string name="specialSubTitle">SELECT A HEADSET FOR MORE INFORMATION</string>
	<string name="wiiTitle">WII U</string>
	
	<!-- Slider screen -->
	<string name="slideDesign">DESIGNED FOR</string>
	<string name="learn">LEARN MORE</string>
	<string name="detailsDisclaimer">Please note that product availability and features are subject to change without notice</string>
    
    <!-- Video playback screen -->
    <string name="back">BACK</string>
    <string name="more">MORE</string>

    <!-- Video titles -->
    <string name="video_title_sports">SOUND EXPERIENCES: SPORTS EXPERIENCE</string>
    <string name="video_title_action">SOUND EXPERIENCES: ACTION EXPERIENCE</string>
    <string name="video_title_rpg">SOUND EXPERIENCES: RPG EXPERIENCE</string>
    <string name="video_title_racing">SOUND EXPERIENCES: RACING EXPERIENCE</string>
    <string name="video_title_tb">FEATURED HEADSETS: TURTLE BEACH THEATER</string>
    <string name="video_title_px22">FEATURED HEADSETS: PX22 PRODUCT VIDEO</string>
    <string name="video_title_x12">FEATURED HEADSETS: X12 PRODUCT VIDEO</string>
    <string name="video_title_p12">FEATURED HEADSETS: P12 PRODUCT VIDEO</string>
    <string name="video_title_px4">FEATURED HEADSETS: PX4 PRODUCT VIDEO</string>
    <string name="video_title_xo7">FEATURED HEADSETS: XOSEVEN PRODUCT VIDEO</string>
    <string name="video_title_ttnlaunch">TITANFALL LAUNCH TRAILER</string>
    <string name="video_title_ttn">TITANFALL ATLAS HEADSET</string>
    <string name="video_title_heroes">HEROES OF THE STORM</string>
    <string name="video_title_chicago">WATCH DOGS: CHICAGO</string>
    <string name="video_title_cod">COD ADVANCED WARFARE REVEAL</string>
    <string name="video_title_evolve">EVOLVE REVEAL TRAILER</string>
    <string name="video_title_disney">DISNEY INFINITY 2 TRAILER</string>

    <!-- Admin module/Update service prompts -->
    <string name="updateContentMessage">Reading new files from disk&#8230;</string>
    <string name="updateContentTitle">Updating application content</string>
    <string name="contentString1">Writing Directory:</string>
    <string name="contentString2">files to do</string>    
    
    <!--
    Demo timeout to video TODO change back...
    <integer name="idleAfter">45000</integer>
        -->
    <integer name="idleAfter">45000</integer>
    
    <string name="disclaimer">NOT ALL PRODUCTS AVAILABLE AT ALL BEST BUY LOCATIONS</string>

</resources>