<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_screen"
    android:gravity="center" >

    <com.clickbrand.turtlebeach.ui.TrueTypeTextView
        android:id="@+id/mmVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="top|right"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:textColor="@color/menuText"
        android:textSize="19sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="-6dp" >

        <ImageView
            android:id="@+id/mmLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/img_turtlebeach_logo" />

        <ImageView
            android:id="@+id/mmLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mmLogo"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/img_linebreak_large" />

        <com.clickbrand.turtlebeach.ui.TrueTypeTextView
            android:id="@+id/mmTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mmLine"
            android:layout_centerHorizontal="true"
            android:text="@string/mmenu"
            android:textColor="@color/menuText"
            android:textSize="47sp" />

        <View
            android:id="@+id/center"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_centerInParent="true" />

        <com.clickbrand.turtlebeach.ui.TrueTypeButton
            android:id="@+id/mmWhy"
            style="@style/MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mmTitleText"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="9dp"
            android:layout_toLeftOf="@id/center"
            android:text="@string/mmenu_why" />

        <com.clickbrand.turtlebeach.ui.TrueTypeButton
            android:id="@+id/mmFeatured"
            style="@style/MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/mmWhy"
            android:layout_below="@id/mmWhy"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="9dp"
            android:layout_toLeftOf="@id/center"
            android:text="@string/mmenu_featured" />

        <com.clickbrand.turtlebeach.ui.TrueTypeButton
            android:id="@+id/mmSelector"
            style="@style/MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/mmFeatured"
            android:layout_below="@id/mmFeatured"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="9dp"
            android:layout_toLeftOf="@id/center"
            android:text="@string/mmenu_select" />

        <com.clickbrand.turtlebeach.ui.TrueTypeButton
            android:id="@+id/mmTrailers"
            style="@style/MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/mmSelector"
            android:layout_below="@id/mmSelector"
            android:layout_marginRight="18dp"
            android:layout_toLeftOf="@id/center"
            android:text="@string/mmenu_trailer" />
        
        <com.clickbrand.turtlebeach.ui.TrueTypeButton
            android:id="@+id/mmCatalog"
            style="@style/MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mmTitleText"
            android:layout_marginLeft="18dp"
            android:layout_marginBottom="9dp"
            android:layout_toRightOf="@id/center"
            android:text="@string/mmenu_catalog" />

        <com.clickbrand.turtlebeach.ui.TrueTypeButton
            android:id="@+id/mmPC"
            style="@style/MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginBottom="9dp"
            android:layout_alignRight="@id/mmCatalog"
            android:layout_below="@id/mmCatalog"
            android:layout_toRightOf="@id/center"
            android:text="@string/mmenu_pc" />
        
        <com.clickbrand.turtlebeach.ui.TrueTypeButton
            android:id="@+id/mmSpecial"
            style="@style/MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginBottom="9dp"
            android:layout_alignRight="@id/mmPC"
            android:layout_below="@id/mmPC"
            android:layout_toRightOf="@id/center"
            android:text="@string/mmenu_special" />

        <com.clickbrand.turtlebeach.ui.TrueTypeButton
            android:id="@+id/mmSound"
            style="@style/MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/mmSpecial"
            android:layout_below="@id/mmSpecial"
            android:layout_marginLeft="18dp"
            android:layout_toRightOf="@id/center"
            android:text="@string/mmenu_sound" />
    </RelativeLayout>

</RelativeLayout>